INDIVIDUAL_WORK/LEXER_FILES/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    None
    SLL
    print
    use

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Declaration Declaration
Rule 2     Program -> Declaration
Rule 3     Program -> <empty>
Rule 4     Declaration -> InputOptionalStruct LT Elements GT
Rule 5     Declaration -> InputRequiredStruct LT Elements GT
Rule 6     Declaration -> Structures Id Assign LT Elements GT
Rule 7     Elements -> Bool
Rule 8     Elements -> Int
Rule 9     Elements -> Id
Rule 10    Elements -> String
Rule 11    Elements -> Elements Separator Elements
Rule 12    Elements -> <empty>
Rule 13    Structures -> DLQ
Rule 14    Structures -> Map
Rule 15    Structures -> AL
Rule 16    Structures -> CDLL
Rule 17    Structures -> AS
Rule 18    Structures -> Set
Rule 19    Structures -> Bag
Rule 20    InputRequiredStruct -> Tree Id Assign LP StringComp RP
Rule 21    InputRequiredStruct -> Tree Id Assign LP NumberComp RP
Rule 22    InputRequiredStruct -> SArrayList Id Assign LP StringComp RP
Rule 23    InputRequiredStruct -> SArrayList Id Assign LP NumberComp RP
Rule 24    InputOptionalStruct -> HSOA Id Assign LP StringComp RP
Rule 25    InputOptionalStruct -> HSOA Id Assign LP NumberComp RP
Rule 26    InputOptionalStruct -> HSSC Id Assign LP StringComp RP
Rule 27    InputOptionalStruct -> HSSC Id Assign LP NumberComp RP
Rule 28    InputOptionalStruct -> HSSC Id Assign LP RP
Rule 29    InputOptionalStruct -> HSOA Id Assign LP RP
Rule 30    Id -> character
Rule 31    Id -> Id digit
Rule 32    Id -> Id character
Rule 33    Bool -> True
Rule 34    Bool -> False
Rule 35    Int -> digit
Rule 36    Int -> digit Int
Rule 37    String -> Comillas Elements Comillas

Terminals, with rules where they appear

AL                   : 15
AS                   : 17
Assign               : 6 20 21 22 23 24 25 26 27 28 29
Bag                  : 19
CDLL                 : 16
Comillas             : 37 37
DLQ                  : 13
False                : 34
GT                   : 4 5 6
HSOA                 : 24 25 29
HSSC                 : 26 27 28
LP                   : 20 21 22 23 24 25 26 27 28 29
LT                   : 4 5 6
Map                  : 14
None                 : 
NumberComp           : 21 23 25 27
RP                   : 20 21 22 23 24 25 26 27 28 29
SArrayList           : 22 23
SLL                  : 
Separator            : 11
Set                  : 18
StringComp           : 20 22 24 26
Tree                 : 20 21
True                 : 33
character            : 30 32
digit                : 31 35 36
error                : 
print                : 
use                  : 

Nonterminals, with rules where they appear

Bool                 : 7
Declaration          : 1 1 2
Elements             : 4 5 6 11 11 37
Id                   : 6 9 20 21 22 23 24 25 26 27 28 29 31 32
InputOptionalStruct  : 4
InputRequiredStruct  : 5
Int                  : 8 36
Program              : 0
String               : 10
Structures           : 6

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Declaration Declaration
    (2) Program -> . Declaration
    (3) Program -> .
    (4) Declaration -> . InputOptionalStruct LT Elements GT
    (5) Declaration -> . InputRequiredStruct LT Elements GT
    (6) Declaration -> . Structures Id Assign LT Elements GT
    (24) InputOptionalStruct -> . HSOA Id Assign LP StringComp RP
    (25) InputOptionalStruct -> . HSOA Id Assign LP NumberComp RP
    (26) InputOptionalStruct -> . HSSC Id Assign LP StringComp RP
    (27) InputOptionalStruct -> . HSSC Id Assign LP NumberComp RP
    (28) InputOptionalStruct -> . HSSC Id Assign LP RP
    (29) InputOptionalStruct -> . HSOA Id Assign LP RP
    (20) InputRequiredStruct -> . Tree Id Assign LP StringComp RP
    (21) InputRequiredStruct -> . Tree Id Assign LP NumberComp RP
    (22) InputRequiredStruct -> . SArrayList Id Assign LP StringComp RP
    (23) InputRequiredStruct -> . SArrayList Id Assign LP NumberComp RP
    (13) Structures -> . DLQ
    (14) Structures -> . Map
    (15) Structures -> . AL
    (16) Structures -> . CDLL
    (17) Structures -> . AS
    (18) Structures -> . Set
    (19) Structures -> . Bag

    $end            reduce using rule 3 (Program -> .)
    HSOA            shift and go to state 6
    HSSC            shift and go to state 7
    Tree            shift and go to state 8
    SArrayList      shift and go to state 9
    DLQ             shift and go to state 10
    Map             shift and go to state 11
    AL              shift and go to state 12
    CDLL            shift and go to state 13
    AS              shift and go to state 14
    Set             shift and go to state 15
    Bag             shift and go to state 16

    Program                        shift and go to state 1
    Declaration                    shift and go to state 2
    InputOptionalStruct            shift and go to state 3
    InputRequiredStruct            shift and go to state 4
    Structures                     shift and go to state 5

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Declaration . Declaration
    (2) Program -> Declaration .
    (4) Declaration -> . InputOptionalStruct LT Elements GT
    (5) Declaration -> . InputRequiredStruct LT Elements GT
    (6) Declaration -> . Structures Id Assign LT Elements GT
    (24) InputOptionalStruct -> . HSOA Id Assign LP StringComp RP
    (25) InputOptionalStruct -> . HSOA Id Assign LP NumberComp RP
    (26) InputOptionalStruct -> . HSSC Id Assign LP StringComp RP
    (27) InputOptionalStruct -> . HSSC Id Assign LP NumberComp RP
    (28) InputOptionalStruct -> . HSSC Id Assign LP RP
    (29) InputOptionalStruct -> . HSOA Id Assign LP RP
    (20) InputRequiredStruct -> . Tree Id Assign LP StringComp RP
    (21) InputRequiredStruct -> . Tree Id Assign LP NumberComp RP
    (22) InputRequiredStruct -> . SArrayList Id Assign LP StringComp RP
    (23) InputRequiredStruct -> . SArrayList Id Assign LP NumberComp RP
    (13) Structures -> . DLQ
    (14) Structures -> . Map
    (15) Structures -> . AL
    (16) Structures -> . CDLL
    (17) Structures -> . AS
    (18) Structures -> . Set
    (19) Structures -> . Bag

    $end            reduce using rule 2 (Program -> Declaration .)
    HSOA            shift and go to state 6
    HSSC            shift and go to state 7
    Tree            shift and go to state 8
    SArrayList      shift and go to state 9
    DLQ             shift and go to state 10
    Map             shift and go to state 11
    AL              shift and go to state 12
    CDLL            shift and go to state 13
    AS              shift and go to state 14
    Set             shift and go to state 15
    Bag             shift and go to state 16

    Declaration                    shift and go to state 17
    InputOptionalStruct            shift and go to state 3
    InputRequiredStruct            shift and go to state 4
    Structures                     shift and go to state 5

state 3

    (4) Declaration -> InputOptionalStruct . LT Elements GT

    LT              shift and go to state 18


state 4

    (5) Declaration -> InputRequiredStruct . LT Elements GT

    LT              shift and go to state 19


state 5

    (6) Declaration -> Structures . Id Assign LT Elements GT
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character

    character       shift and go to state 21

    Id                             shift and go to state 20

state 6

    (24) InputOptionalStruct -> HSOA . Id Assign LP StringComp RP
    (25) InputOptionalStruct -> HSOA . Id Assign LP NumberComp RP
    (29) InputOptionalStruct -> HSOA . Id Assign LP RP
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character

    character       shift and go to state 21

    Id                             shift and go to state 22

state 7

    (26) InputOptionalStruct -> HSSC . Id Assign LP StringComp RP
    (27) InputOptionalStruct -> HSSC . Id Assign LP NumberComp RP
    (28) InputOptionalStruct -> HSSC . Id Assign LP RP
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character

    character       shift and go to state 21

    Id                             shift and go to state 23

state 8

    (20) InputRequiredStruct -> Tree . Id Assign LP StringComp RP
    (21) InputRequiredStruct -> Tree . Id Assign LP NumberComp RP
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character

    character       shift and go to state 21

    Id                             shift and go to state 24

state 9

    (22) InputRequiredStruct -> SArrayList . Id Assign LP StringComp RP
    (23) InputRequiredStruct -> SArrayList . Id Assign LP NumberComp RP
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character

    character       shift and go to state 21

    Id                             shift and go to state 25

state 10

    (13) Structures -> DLQ .

    character       reduce using rule 13 (Structures -> DLQ .)


state 11

    (14) Structures -> Map .

    character       reduce using rule 14 (Structures -> Map .)


state 12

    (15) Structures -> AL .

    character       reduce using rule 15 (Structures -> AL .)


state 13

    (16) Structures -> CDLL .

    character       reduce using rule 16 (Structures -> CDLL .)


state 14

    (17) Structures -> AS .

    character       reduce using rule 17 (Structures -> AS .)


state 15

    (18) Structures -> Set .

    character       reduce using rule 18 (Structures -> Set .)


state 16

    (19) Structures -> Bag .

    character       reduce using rule 19 (Structures -> Bag .)


state 17

    (1) Program -> Declaration Declaration .

    $end            reduce using rule 1 (Program -> Declaration Declaration .)


state 18

    (4) Declaration -> InputOptionalStruct LT . Elements GT
    (7) Elements -> . Bool
    (8) Elements -> . Int
    (9) Elements -> . Id
    (10) Elements -> . String
    (11) Elements -> . Elements Separator Elements
    (12) Elements -> .
    (33) Bool -> . True
    (34) Bool -> . False
    (35) Int -> . digit
    (36) Int -> . digit Int
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character
    (37) String -> . Comillas Elements Comillas

    GT              reduce using rule 12 (Elements -> .)
    Separator       reduce using rule 12 (Elements -> .)
    True            shift and go to state 31
    False           shift and go to state 32
    digit           shift and go to state 33
    character       shift and go to state 21
    Comillas        shift and go to state 34

    Elements                       shift and go to state 26
    Bool                           shift and go to state 27
    Int                            shift and go to state 28
    Id                             shift and go to state 29
    String                         shift and go to state 30

state 19

    (5) Declaration -> InputRequiredStruct LT . Elements GT
    (7) Elements -> . Bool
    (8) Elements -> . Int
    (9) Elements -> . Id
    (10) Elements -> . String
    (11) Elements -> . Elements Separator Elements
    (12) Elements -> .
    (33) Bool -> . True
    (34) Bool -> . False
    (35) Int -> . digit
    (36) Int -> . digit Int
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character
    (37) String -> . Comillas Elements Comillas

    GT              reduce using rule 12 (Elements -> .)
    Separator       reduce using rule 12 (Elements -> .)
    True            shift and go to state 31
    False           shift and go to state 32
    digit           shift and go to state 33
    character       shift and go to state 21
    Comillas        shift and go to state 34

    Elements                       shift and go to state 35
    Bool                           shift and go to state 27
    Int                            shift and go to state 28
    Id                             shift and go to state 29
    String                         shift and go to state 30

state 20

    (6) Declaration -> Structures Id . Assign LT Elements GT
    (31) Id -> Id . digit
    (32) Id -> Id . character

    Assign          shift and go to state 36
    digit           shift and go to state 37
    character       shift and go to state 38


state 21

    (30) Id -> character .

    Assign          reduce using rule 30 (Id -> character .)
    digit           reduce using rule 30 (Id -> character .)
    character       reduce using rule 30 (Id -> character .)
    GT              reduce using rule 30 (Id -> character .)
    Separator       reduce using rule 30 (Id -> character .)
    Comillas        reduce using rule 30 (Id -> character .)


state 22

    (24) InputOptionalStruct -> HSOA Id . Assign LP StringComp RP
    (25) InputOptionalStruct -> HSOA Id . Assign LP NumberComp RP
    (29) InputOptionalStruct -> HSOA Id . Assign LP RP
    (31) Id -> Id . digit
    (32) Id -> Id . character

    Assign          shift and go to state 39
    digit           shift and go to state 37
    character       shift and go to state 38


state 23

    (26) InputOptionalStruct -> HSSC Id . Assign LP StringComp RP
    (27) InputOptionalStruct -> HSSC Id . Assign LP NumberComp RP
    (28) InputOptionalStruct -> HSSC Id . Assign LP RP
    (31) Id -> Id . digit
    (32) Id -> Id . character

    Assign          shift and go to state 40
    digit           shift and go to state 37
    character       shift and go to state 38


state 24

    (20) InputRequiredStruct -> Tree Id . Assign LP StringComp RP
    (21) InputRequiredStruct -> Tree Id . Assign LP NumberComp RP
    (31) Id -> Id . digit
    (32) Id -> Id . character

    Assign          shift and go to state 41
    digit           shift and go to state 37
    character       shift and go to state 38


state 25

    (22) InputRequiredStruct -> SArrayList Id . Assign LP StringComp RP
    (23) InputRequiredStruct -> SArrayList Id . Assign LP NumberComp RP
    (31) Id -> Id . digit
    (32) Id -> Id . character

    Assign          shift and go to state 42
    digit           shift and go to state 37
    character       shift and go to state 38


state 26

    (4) Declaration -> InputOptionalStruct LT Elements . GT
    (11) Elements -> Elements . Separator Elements

    GT              shift and go to state 43
    Separator       shift and go to state 44


state 27

    (7) Elements -> Bool .

    GT              reduce using rule 7 (Elements -> Bool .)
    Separator       reduce using rule 7 (Elements -> Bool .)
    Comillas        reduce using rule 7 (Elements -> Bool .)


state 28

    (8) Elements -> Int .

    GT              reduce using rule 8 (Elements -> Int .)
    Separator       reduce using rule 8 (Elements -> Int .)
    Comillas        reduce using rule 8 (Elements -> Int .)


state 29

    (9) Elements -> Id .
    (31) Id -> Id . digit
    (32) Id -> Id . character

    GT              reduce using rule 9 (Elements -> Id .)
    Separator       reduce using rule 9 (Elements -> Id .)
    Comillas        reduce using rule 9 (Elements -> Id .)
    digit           shift and go to state 37
    character       shift and go to state 38


state 30

    (10) Elements -> String .

    GT              reduce using rule 10 (Elements -> String .)
    Separator       reduce using rule 10 (Elements -> String .)
    Comillas        reduce using rule 10 (Elements -> String .)


state 31

    (33) Bool -> True .

    GT              reduce using rule 33 (Bool -> True .)
    Separator       reduce using rule 33 (Bool -> True .)
    Comillas        reduce using rule 33 (Bool -> True .)


state 32

    (34) Bool -> False .

    GT              reduce using rule 34 (Bool -> False .)
    Separator       reduce using rule 34 (Bool -> False .)
    Comillas        reduce using rule 34 (Bool -> False .)


state 33

    (35) Int -> digit .
    (36) Int -> digit . Int
    (35) Int -> . digit
    (36) Int -> . digit Int

    GT              reduce using rule 35 (Int -> digit .)
    Separator       reduce using rule 35 (Int -> digit .)
    Comillas        reduce using rule 35 (Int -> digit .)
    digit           shift and go to state 33

    Int                            shift and go to state 45

state 34

    (37) String -> Comillas . Elements Comillas
    (7) Elements -> . Bool
    (8) Elements -> . Int
    (9) Elements -> . Id
    (10) Elements -> . String
    (11) Elements -> . Elements Separator Elements
    (12) Elements -> .
    (33) Bool -> . True
    (34) Bool -> . False
    (35) Int -> . digit
    (36) Int -> . digit Int
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character
    (37) String -> . Comillas Elements Comillas

  ! shift/reduce conflict for Comillas resolved as shift
    Separator       reduce using rule 12 (Elements -> .)
    True            shift and go to state 31
    False           shift and go to state 32
    digit           shift and go to state 33
    character       shift and go to state 21
    Comillas        shift and go to state 34

  ! Comillas        [ reduce using rule 12 (Elements -> .) ]

    Elements                       shift and go to state 46
    Bool                           shift and go to state 27
    Int                            shift and go to state 28
    Id                             shift and go to state 29
    String                         shift and go to state 30

state 35

    (5) Declaration -> InputRequiredStruct LT Elements . GT
    (11) Elements -> Elements . Separator Elements

    GT              shift and go to state 47
    Separator       shift and go to state 44


state 36

    (6) Declaration -> Structures Id Assign . LT Elements GT

    LT              shift and go to state 48


state 37

    (31) Id -> Id digit .

    Assign          reduce using rule 31 (Id -> Id digit .)
    digit           reduce using rule 31 (Id -> Id digit .)
    character       reduce using rule 31 (Id -> Id digit .)
    GT              reduce using rule 31 (Id -> Id digit .)
    Separator       reduce using rule 31 (Id -> Id digit .)
    Comillas        reduce using rule 31 (Id -> Id digit .)


state 38

    (32) Id -> Id character .

    Assign          reduce using rule 32 (Id -> Id character .)
    digit           reduce using rule 32 (Id -> Id character .)
    character       reduce using rule 32 (Id -> Id character .)
    GT              reduce using rule 32 (Id -> Id character .)
    Separator       reduce using rule 32 (Id -> Id character .)
    Comillas        reduce using rule 32 (Id -> Id character .)


state 39

    (24) InputOptionalStruct -> HSOA Id Assign . LP StringComp RP
    (25) InputOptionalStruct -> HSOA Id Assign . LP NumberComp RP
    (29) InputOptionalStruct -> HSOA Id Assign . LP RP

    LP              shift and go to state 49


state 40

    (26) InputOptionalStruct -> HSSC Id Assign . LP StringComp RP
    (27) InputOptionalStruct -> HSSC Id Assign . LP NumberComp RP
    (28) InputOptionalStruct -> HSSC Id Assign . LP RP

    LP              shift and go to state 50


state 41

    (20) InputRequiredStruct -> Tree Id Assign . LP StringComp RP
    (21) InputRequiredStruct -> Tree Id Assign . LP NumberComp RP

    LP              shift and go to state 51


state 42

    (22) InputRequiredStruct -> SArrayList Id Assign . LP StringComp RP
    (23) InputRequiredStruct -> SArrayList Id Assign . LP NumberComp RP

    LP              shift and go to state 52


state 43

    (4) Declaration -> InputOptionalStruct LT Elements GT .

    HSOA            reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    HSSC            reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    Tree            reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    SArrayList      reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    DLQ             reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    Map             reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    AL              reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    CDLL            reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    AS              reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    Set             reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    Bag             reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)
    $end            reduce using rule 4 (Declaration -> InputOptionalStruct LT Elements GT .)


state 44

    (11) Elements -> Elements Separator . Elements
    (7) Elements -> . Bool
    (8) Elements -> . Int
    (9) Elements -> . Id
    (10) Elements -> . String
    (11) Elements -> . Elements Separator Elements
    (12) Elements -> .
    (33) Bool -> . True
    (34) Bool -> . False
    (35) Int -> . digit
    (36) Int -> . digit Int
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character
    (37) String -> . Comillas Elements Comillas

  ! shift/reduce conflict for Comillas resolved as shift
    Separator       reduce using rule 12 (Elements -> .)
    GT              reduce using rule 12 (Elements -> .)
    True            shift and go to state 31
    False           shift and go to state 32
    digit           shift and go to state 33
    character       shift and go to state 21
    Comillas        shift and go to state 34

  ! Comillas        [ reduce using rule 12 (Elements -> .) ]

    Elements                       shift and go to state 53
    Bool                           shift and go to state 27
    Int                            shift and go to state 28
    Id                             shift and go to state 29
    String                         shift and go to state 30

state 45

    (36) Int -> digit Int .

    GT              reduce using rule 36 (Int -> digit Int .)
    Separator       reduce using rule 36 (Int -> digit Int .)
    Comillas        reduce using rule 36 (Int -> digit Int .)


state 46

    (37) String -> Comillas Elements . Comillas
    (11) Elements -> Elements . Separator Elements

    Comillas        shift and go to state 54
    Separator       shift and go to state 44


state 47

    (5) Declaration -> InputRequiredStruct LT Elements GT .

    HSOA            reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    HSSC            reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    Tree            reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    SArrayList      reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    DLQ             reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    Map             reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    AL              reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    CDLL            reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    AS              reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    Set             reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    Bag             reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)
    $end            reduce using rule 5 (Declaration -> InputRequiredStruct LT Elements GT .)


state 48

    (6) Declaration -> Structures Id Assign LT . Elements GT
    (7) Elements -> . Bool
    (8) Elements -> . Int
    (9) Elements -> . Id
    (10) Elements -> . String
    (11) Elements -> . Elements Separator Elements
    (12) Elements -> .
    (33) Bool -> . True
    (34) Bool -> . False
    (35) Int -> . digit
    (36) Int -> . digit Int
    (30) Id -> . character
    (31) Id -> . Id digit
    (32) Id -> . Id character
    (37) String -> . Comillas Elements Comillas

    GT              reduce using rule 12 (Elements -> .)
    Separator       reduce using rule 12 (Elements -> .)
    True            shift and go to state 31
    False           shift and go to state 32
    digit           shift and go to state 33
    character       shift and go to state 21
    Comillas        shift and go to state 34

    Id                             shift and go to state 29
    Elements                       shift and go to state 55
    Bool                           shift and go to state 27
    Int                            shift and go to state 28
    String                         shift and go to state 30

state 49

    (24) InputOptionalStruct -> HSOA Id Assign LP . StringComp RP
    (25) InputOptionalStruct -> HSOA Id Assign LP . NumberComp RP
    (29) InputOptionalStruct -> HSOA Id Assign LP . RP

    StringComp      shift and go to state 56
    NumberComp      shift and go to state 58
    RP              shift and go to state 57


state 50

    (26) InputOptionalStruct -> HSSC Id Assign LP . StringComp RP
    (27) InputOptionalStruct -> HSSC Id Assign LP . NumberComp RP
    (28) InputOptionalStruct -> HSSC Id Assign LP . RP

    StringComp      shift and go to state 59
    NumberComp      shift and go to state 61
    RP              shift and go to state 60


state 51

    (20) InputRequiredStruct -> Tree Id Assign LP . StringComp RP
    (21) InputRequiredStruct -> Tree Id Assign LP . NumberComp RP

    StringComp      shift and go to state 62
    NumberComp      shift and go to state 63


state 52

    (22) InputRequiredStruct -> SArrayList Id Assign LP . StringComp RP
    (23) InputRequiredStruct -> SArrayList Id Assign LP . NumberComp RP

    StringComp      shift and go to state 64
    NumberComp      shift and go to state 65


state 53

    (11) Elements -> Elements Separator Elements .
    (11) Elements -> Elements . Separator Elements

  ! shift/reduce conflict for Separator resolved as shift
    GT              reduce using rule 11 (Elements -> Elements Separator Elements .)
    Comillas        reduce using rule 11 (Elements -> Elements Separator Elements .)
    Separator       shift and go to state 44

  ! Separator       [ reduce using rule 11 (Elements -> Elements Separator Elements .) ]


state 54

    (37) String -> Comillas Elements Comillas .

    GT              reduce using rule 37 (String -> Comillas Elements Comillas .)
    Separator       reduce using rule 37 (String -> Comillas Elements Comillas .)
    Comillas        reduce using rule 37 (String -> Comillas Elements Comillas .)


state 55

    (6) Declaration -> Structures Id Assign LT Elements . GT
    (11) Elements -> Elements . Separator Elements

    GT              shift and go to state 66
    Separator       shift and go to state 44


state 56

    (24) InputOptionalStruct -> HSOA Id Assign LP StringComp . RP

    RP              shift and go to state 67


state 57

    (29) InputOptionalStruct -> HSOA Id Assign LP RP .

    LT              reduce using rule 29 (InputOptionalStruct -> HSOA Id Assign LP RP .)


state 58

    (25) InputOptionalStruct -> HSOA Id Assign LP NumberComp . RP

    RP              shift and go to state 68


state 59

    (26) InputOptionalStruct -> HSSC Id Assign LP StringComp . RP

    RP              shift and go to state 69


state 60

    (28) InputOptionalStruct -> HSSC Id Assign LP RP .

    LT              reduce using rule 28 (InputOptionalStruct -> HSSC Id Assign LP RP .)


state 61

    (27) InputOptionalStruct -> HSSC Id Assign LP NumberComp . RP

    RP              shift and go to state 70


state 62

    (20) InputRequiredStruct -> Tree Id Assign LP StringComp . RP

    RP              shift and go to state 71


state 63

    (21) InputRequiredStruct -> Tree Id Assign LP NumberComp . RP

    RP              shift and go to state 72


state 64

    (22) InputRequiredStruct -> SArrayList Id Assign LP StringComp . RP

    RP              shift and go to state 73


state 65

    (23) InputRequiredStruct -> SArrayList Id Assign LP NumberComp . RP

    RP              shift and go to state 74


state 66

    (6) Declaration -> Structures Id Assign LT Elements GT .

    HSOA            reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    HSSC            reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    Tree            reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    SArrayList      reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    DLQ             reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    Map             reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    AL              reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    CDLL            reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    AS              reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    Set             reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    Bag             reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)
    $end            reduce using rule 6 (Declaration -> Structures Id Assign LT Elements GT .)


state 67

    (24) InputOptionalStruct -> HSOA Id Assign LP StringComp RP .

    LT              reduce using rule 24 (InputOptionalStruct -> HSOA Id Assign LP StringComp RP .)


state 68

    (25) InputOptionalStruct -> HSOA Id Assign LP NumberComp RP .

    LT              reduce using rule 25 (InputOptionalStruct -> HSOA Id Assign LP NumberComp RP .)


state 69

    (26) InputOptionalStruct -> HSSC Id Assign LP StringComp RP .

    LT              reduce using rule 26 (InputOptionalStruct -> HSSC Id Assign LP StringComp RP .)


state 70

    (27) InputOptionalStruct -> HSSC Id Assign LP NumberComp RP .

    LT              reduce using rule 27 (InputOptionalStruct -> HSSC Id Assign LP NumberComp RP .)


state 71

    (20) InputRequiredStruct -> Tree Id Assign LP StringComp RP .

    LT              reduce using rule 20 (InputRequiredStruct -> Tree Id Assign LP StringComp RP .)


state 72

    (21) InputRequiredStruct -> Tree Id Assign LP NumberComp RP .

    LT              reduce using rule 21 (InputRequiredStruct -> Tree Id Assign LP NumberComp RP .)


state 73

    (22) InputRequiredStruct -> SArrayList Id Assign LP StringComp RP .

    LT              reduce using rule 22 (InputRequiredStruct -> SArrayList Id Assign LP StringComp RP .)


state 74

    (23) InputRequiredStruct -> SArrayList Id Assign LP NumberComp RP .

    LT              reduce using rule 23 (InputRequiredStruct -> SArrayList Id Assign LP NumberComp RP .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for Comillas in state 34 resolved as shift
WARNING: shift/reduce conflict for Comillas in state 44 resolved as shift
WARNING: shift/reduce conflict for Separator in state 53 resolved as shift
